--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -8,10 +8,10 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>周洺翰個人網站</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
@@ -30,25 +30,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="about.html">關於</a>
           </li>
           <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Portfolio
+              作品集
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item active" href="portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+              <a class="dropdown-item active" href="portfolio-1-col.html">專案</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">練習</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">Game Jam</a>
               <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
               <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">聯絡我</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -81,28 +81,37 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Portfolio 1
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3 " style="color:rgb(25, 51, 80);padding-top:15px; margin-bottom: 0px;" ><b>作品集</b>
+      <small><b> _專案</b></small>
+      <div style="width:45%;height:5px;background-color: #3c3f66; margin: 5px;"></div>
+      <div style="width:20%;height:5px;background-color: #3c3f66;margin: 5px;"></div>
     </h1>
 
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+    <ol class="breadcrumb" style="display:flex; align-items: center;">
+      <li class="breadcrumb-item active" style="font-size: x-large; color: black; vertical-align: text-bottom;"><b>專案</b> </li>
+      <li class="breadcrumb-item" style="vertical-align: text-bottom;">
+        <a href="index.html">練習</a>
       </li>
-      <li class="breadcrumb-item active">Portfolio 1</li>
+      <li class="breadcrumb-item" style="vertical-align: text-bottom;">
+        <a href="index.html">Game Jam</a>
+      </li>
+      
     </ol>
+
 
     <!-- Project One -->
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/Slime.png" alt="">
         </a>
       </div>
-      <div class="col-md-5">
-        <h3>Project One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-        <a class="btn btn-primary" href="#">View Project
+      <div class="col-md-5" style="position:  relative">
+        <h3><b>顏料遊戲 (Game of Color)</b></h3>
+        <p style = "font-size: larger;">以顏色與混色為核心玩法的多人合作射擊遊戲，2~4位玩家操作著史萊姆對抗無情的哥布林大軍。</p>
+        <br>
+        <br>
+        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -115,13 +124,15 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/eyeD.png" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Two</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3><b>XR-防盲小尖兵</b></h3>
+        <p style = "font-size: larger;">資策會與台灣防盲基金會共同合作製作，一款使人了解眼睛疾病的APP，其中包含眼疾視覺模擬和小遊戲。</p>
+        <br>
+        <br>
+        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -134,13 +145,15 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/blood.png" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Three</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3><b>厄血</b></h3>
+        <p style = "font-size:larger;"> 第三人稱潛行動作遊戲，營造末日氛圍的線性劇情遊戲。</p>
+        <br>
+        <br>
+        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -154,13 +167,15 @@
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/Weapolution.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Four</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3><b>武器革命 (Weapolution)</b></h3>
+        <p style = "font-size:larger;">單機雙人合作遊戲，玩家在不同的時代中使用當代的武器對抗當代的怪物，玩家將各司其職：一位製作裝備，另一位與怪物搏鬥。此外也有2 VS 2機制讓玩家彼此考驗默契與其他玩家對戰。</p>
+        <br>
+        <br>
+        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -171,26 +186,14 @@
 
     <!-- Pagination -->
     <ul class="pagination justify-content-center">
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-        </a>
+      <li class="page-item disabled">
+        <a class="page-link" href="#">專案</a>
       </li>
       <li class="page-item">
-        <a class="page-link" href="#">1</a>
+        <a class="page-link" href="#">練習</a>
       </li>
       <li class="page-item">
-        <a class="page-link" href="#">2</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">3</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
-        </a>
+        <a class="page-link" href="#">Game Jam</a>
       </li>
     </ul>
 
@@ -208,6 +211,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  
 
 </body>
 
