--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -8,10 +8,10 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>周洺翰作品集_XR防盲小尖兵</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
@@ -81,25 +81,99 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Portfolio Item
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3 projectTitle"><b>XR防盲小尖兵</b>
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+        <a href="index.html">作品集_專案</a>
       </li>
-      <li class="breadcrumb-item active">Portfolio Item</li>
+      <li class="breadcrumb-item active">XR防盲小尖兵</li>
     </ol>
 
-    <!-- Portfolio Item Row -->
-    <div class="row">
 
-      <div class="col-md-8">
-        <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+    <div class="row" style="margin: auto; display: flex; flex-direction: row; align-items: center; justify-content: center; flex-wrap: nowrap;">
+      <a href="#" class="imgBarPreBtn" style="border-right-style: solid;border-color: #233d5a; display: flex; flex-direction: row; align-items: center; justify-content: center;">
+        <span class="carousel-control-next-icon-dark"></span>
+      </a>
+      <div class="col-md-10 imgBarShowVideo" style="display: block;position: relative;height: 0;overflow: hidden;padding: 0;padding-bottom: 50%; margin-left: 3%; margin-right: 3%;">
+        <iframe src="https://drive.google.com/file/d/1D-n0OOxUrLTckGFXgZkYpiHmp3gLtpcE/preview" allowfullscreen="true" style=" position: absolute;height: 100%; width: 100%; "></iframe>
+        <!-- <img class="img-fluid" id="hide" src="Image/test0.jpg" alt=""> -->
+      </div>
+      <div class="col-md-10 imgBarShow">
+        <img class="img-fluid imgBarShowImg" style="width: 100%;" src="Image/test0.jpg" alt="">
+      </div>
+      <a href="#" class="imgBarNextBtn" style=" border-left-style: solid;border-color: #233d5a; display: flex; flex-direction: row; align-items: center; justify-content: center;">
+        <span class="carousel-control-prev-icon-dark"></span>
+      </a>
+    </div>
+
+    <!-- Related Projects Row -->
+
+    <div  style="width: 90%; margin: auto; display: flex; flex-direction: row; align-items: center; justify-content: center; margin-top: 3%;">
+
+      <div style=" width: 70%; display: flex; flex-direction: row; justify-content: space-evenly; flex-wrap: wrap; ">
+
+        <div class=" mb-2 imgBarElementLock" style=" position: absolute; border-style: dashed; border-width: 4px; border-color: rgb(14, 155, 255); z-index: 10;" >
+          
+        </div>
+        <div class=" mb-2 imgBarVideoElement" name = "https://drive.google.com/file/d/1D-n0OOxUrLTckGFXgZkYpiHmp3gLtpcE/preview" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREyeVideo.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye0.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye1.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye2.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye3.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye4.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye5.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye6.png" alt="">
+          </a>
+        </div>
+        <div class=" mb-2 imgBarImgElement" style=" margin-left: 1%;margin-right: 1%; flex-basis: 20%" >
+          <a href="#">
+            <img class="img-fluid" src="Image/XREye7.gif" alt="">
+          </a>
+        </div>
+  
       </div>
 
-      <div class="col-md-4">
+    </div>
+
+    
+    <!-- /.row -->
+
+    <!-- Portfolio Item Row -->
+    <div class="mb-4" style="margin-left: 5%; margin-right: 5%;">
+
+      <div class="">
         <h3 class="my-3">Project Description</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
         <h3 class="my-3">Project Details</h3>
@@ -114,41 +188,10 @@
     </div>
     <!-- /.row -->
 
-    <!-- Related Projects Row -->
-    <h3 class="my-4">Related Projects</h3>
-
-    <div class="row">
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </a>
-      </div>
-
-    </div>
-    <!-- /.row -->
-
   </div>
   <!-- /.container -->
 
+  
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
@@ -160,6 +203,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="js/changeImageTest.js"></script>
 
 </body>
 
