--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -41,7 +41,7 @@
               <a class="dropdown-item" href="portfolio-2-col.html">練習</a>
               <a class="dropdown-item" href="portfolio-3-col.html">Game Jam</a>
               <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+              <a class="dropdown-item" href="portfolio-item.html">作品單頁</a>
             </div>
           </li>
           <li class="nav-item">
