--- a/collectionPractice.html
+++ b/collectionPractice.html
@@ -37,11 +37,9 @@
               作品集
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item active" href="collectionProject.html">專案</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">練習</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">Game Jam</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="itemXREye.html">作品單頁</a>
+              <a class="dropdown-item" href="collectionProject.html">專案</a>
+              <a class="dropdown-item active" href="collectionPractice.html">個人學習</a>
+              <a class="dropdown-item" href="collectionGameJam.html">Game Jam</a>
             </div>
           </li>
           <li class="nav-item">
@@ -57,18 +55,18 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3 " style="color:rgb(25, 51, 80);padding-top:15px; margin-bottom: 0px;" ><b>作品集</b>
-      <small><b> _專案</b></small>
+      <small><b> _個人學習</b></small>
       <div style="width:45%;height:5px;background-color: #3c3f66; margin: 5px;"></div>
       <div style="width:20%;height:5px;background-color: #3c3f66;margin: 5px;"></div>
     </h1>
 
     <ol class="breadcrumb" style="display:flex; align-items: center;">
-      <li class="breadcrumb-item active" style="font-size: x-large; color: black; vertical-align: text-bottom;"><b>專案</b> </li>
       <li class="breadcrumb-item" style="vertical-align: text-bottom;">
-        <a href="index.html">練習</a>
+        <a href="collectionProject.html">專案</a>
       </li>
+      <li class="breadcrumb-item active" style="font-size: x-large; color: black; vertical-align: text-bottom;"><b>個人學習</b> </li>
       <li class="breadcrumb-item" style="vertical-align: text-bottom;">
-        <a href="index.html">Game Jam</a>
+        <a href="collectionGameJam.html">Game Jam</a>
       </li>
       
     </ol>
@@ -77,16 +75,16 @@
     <!-- Project One -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbSlime.png" alt="">
+        <a href="itemPatrol.html">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbPatrol.png" alt="">
         </a>
       </div>
       <div class="col-md-5" style="position:  relative">
-        <h3><b>顏料遊戲 (Game of Color)</b></h3>
-        <p style = "font-size: larger;">以顏色與混色為核心玩法的多人合作射擊遊戲，2~4位玩家操作著史萊姆對抗無情的哥布林大軍。</p>
+        <h3><b>【論文】動態規劃潛行遊戲中非玩家角色巡邏路線之研究</b></h3>
+        <p style = "font-size: larger;">根據地圖生成潛行遊戲中的守衛巡邏路線，並於遊戲中根據玩家的位置動態改便巡邏路線</p>
         <br>
         <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+        <a class="btn btn-primary" href="itemPatrol.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -94,46 +92,44 @@
     <!-- /.row -->
 
     <hr>
+<!-- Project Three -->
+<div class="row">
+  <div class="col-md-7">
+    <a href="itemGoogle.html">
+      <img class="img-fluid rounded mb-3 mb-md-0" src="Image/google0.png" alt="">
+    </a>
+  </div>
+  <div class="col-md-5">
+    <h3><b>Google 插件練習</b></h3>
+    <p style = "font-size:larger;"> 使用Google底下的套件進行練習</p>
+    <br>
+    <br>
+    <a class="btn btn-primary" href="itemGoogle.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+  </div>
+</div>
+<!-- /.row -->
+<hr>
 
     <!-- Project Two -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbEye.png" alt="">
+        <a href="itemOpenGL.html">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbOpenGL.png" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3><b>XR-防盲小尖兵</b></h3>
-        <p style = "font-size: larger;">資策會與台灣防盲基金會共同合作，一款能了解眼睛疾病的APP，其中包含眼疾視覺模擬和小遊戲。</p>
+        <h3><b>OpenGL學習</b></h3>
+        <p style = "font-size: larger;">大四上課程，學習透過 Visual Stusio2015 使用 OpenGL 開發,了解遊戲是如何呈現畫面。</p>
         <br>
         <br>
-        <a class="btn btn-primary" href="itemXREye.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+        <a class="btn btn-primary" href="itemOpenGL.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
     </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Three -->
-    <div class="row">
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbBlood.png" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3><b>厄血</b></h3>
-        <p style = "font-size:larger;"> 第三人稱潛行動作遊戲，營造末日氛圍的線性劇情遊戲。</p>
-        <br>
-        <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-    <!-- /.row -->
+    <!-- /.row -->    
 
     <hr>
 
@@ -141,16 +137,16 @@
     <div class="row">
 
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbWeapon.png" alt="">
+        <a href="itemCOCOS.html">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/cocos0.png" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3><b>武器革命 (Weapolution)</b></h3>
-        <p style = "font-size:larger;">單機雙人合作遊戲，玩家在不同的時代中使用當代的武器對抗當代的怪物，玩家將各司其職：一位製作裝備，另一位與怪物搏鬥。</p>
+        <h3><b>Cocos2d-x 學習</b></h3>
+        <p style = "font-size:larger;">大三下課程，學習透過Cocos了解遊戲引擎的更新。</p>
         <br>
         <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+        <a class="btn btn-primary" href="itemCOCOS.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -161,14 +157,14 @@
 
     <!-- Pagination -->
     <ul class="pagination justify-content-center">
+      <li class="page-item ">
+        <a class="page-link" href="collectionProject.html">專案</a>
+      </li>
       <li class="page-item disabled">
-        <a class="page-link" href="#">專案</a>
+        <a class="page-link" href="#">個人學習</a>
       </li>
       <li class="page-item">
-        <a class="page-link" href="#">練習</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">Game Jam</a>
+        <a class="page-link" href="collectionGameJam.html">Game Jam</a>
       </li>
     </ul>
 
@@ -177,8 +173,9 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+       <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
+      <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
     </div>
     <!-- /.container -->
   </footer>
