--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top" style="font-family:'Noto Sans TC', sans-serif;">
     <div class="container">
       <a class="navbar-brand" href="index.html">Dyron Zhou</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,18 +30,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="about.html">關於</a>
+            <a class="nav-link" href="index.html">關於我</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               作品集
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item active" href="portfolio-1-col.html">專案</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">練習</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">Game Jam</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">作品單頁</a>
+              <a class="dropdown-item" href="collectionProject.html">專案</a>
+              <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
+              <a class="dropdown-item" href="collectionGameJam.html">Game Jam</a>
             </div>
           </li>
           <li class="nav-item">
@@ -56,7 +54,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
+    <h1 class="mt-4 mb-3">聯絡我
       <small>Subheading</small>
     </h1>
 
@@ -156,8 +154,9 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
+      <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
     </div>
     <!-- /.container -->
   </footer>
