--- a/collectionGameJam.html
+++ b/collectionGameJam.html
@@ -37,11 +37,9 @@
               作品集
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item active" href="collectionProject.html">專案</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">練習</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">Game Jam</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="itemXREye.html">作品單頁</a>
+              <a class="dropdown-item" href="collectionProject.html">專案</a>
+              <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
+              <a class="dropdown-item active" href="#">Game Jam</a>
             </div>
           </li>
           <li class="nav-item">
@@ -57,19 +55,20 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3 " style="color:rgb(25, 51, 80);padding-top:15px; margin-bottom: 0px;" ><b>作品集</b>
-      <small><b> _專案</b></small>
+      <small><b> _Game Jam</b></small>
       <div style="width:45%;height:5px;background-color: #3c3f66; margin: 5px;"></div>
       <div style="width:20%;height:5px;background-color: #3c3f66;margin: 5px;"></div>
     </h1>
 
     <ol class="breadcrumb" style="display:flex; align-items: center;">
-      <li class="breadcrumb-item active" style="font-size: x-large; color: black; vertical-align: text-bottom;"><b>專案</b> </li>
+
       <li class="breadcrumb-item" style="vertical-align: text-bottom;">
-        <a href="index.html">練習</a>
+        <a href="collectionProject.html">專案</a>
       </li>
       <li class="breadcrumb-item" style="vertical-align: text-bottom;">
-        <a href="index.html">Game Jam</a>
+        <a href="collectionPractice.html">個人學習</a>
       </li>
+      <li class="breadcrumb-item active" style="font-size: x-large; color: black; vertical-align: text-bottom;"><b>Game Jam</b> </li>
       
     </ol>
 
@@ -77,16 +76,16 @@
     <!-- Project One -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbSlime.png" alt="">
+        <a href="itemDate.html">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumDate.png" alt="">
         </a>
       </div>
       <div class="col-md-5" style="position:  relative">
-        <h3><b>顏料遊戲 (Game of Color)</b></h3>
-        <p style = "font-size: larger;">以顏色與混色為核心玩法的多人合作射擊遊戲，2~4位玩家操作著史萊姆對抗無情的哥布林大軍。</p>
+        <h3><b>HotDATE</b></h3>
+        <p style = "font-size: larger;">雙人搞怪合作遊戲，兩人一起約會,再鬼畜的操作下要幫彼此點蠟燭、餵食、付錢等等</p>
         <br>
         <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+        <a class="btn btn-primary" href="itemDate.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -98,16 +97,16 @@
     <!-- Project Two -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbEye.png" alt="">
+        <a href="itemLie.html">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbLie.png" alt="">
         </a>
       </div>
-      <div class="col-md-5">
-        <h3><b>XR-防盲小尖兵</b></h3>
-        <p style = "font-size: larger;">資策會與台灣防盲基金會共同合作，一款能了解眼睛疾病的APP，其中包含眼疾視覺模擬和小遊戲。</p>
+      <div class="col-md-5" style="position:  relative">
+        <h3><b>DareULie</b></h3>
+        <p style = "font-size: larger;">雙人競爭搞怪遊戲，自己第一次參加系上GameJam的作品</p>
         <br>
         <br>
-        <a class="btn btn-primary" href="itemXREye.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+        <a class="btn btn-primary" href="itemLie.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -116,58 +115,19 @@
 
     <hr>
 
-    <!-- Project Three -->
-    <div class="row">
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbBlood.png" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3><b>厄血</b></h3>
-        <p style = "font-size:larger;"> 第三人稱潛行動作遊戲，營造末日氛圍的線性劇情遊戲。</p>
-        <br>
-        <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Four -->
-    <div class="row">
-
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbWeapon.png" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3><b>武器革命 (Weapolution)</b></h3>
-        <p style = "font-size:larger;">單機雙人合作遊戲，玩家在不同的時代中使用當代的武器對抗當代的怪物，玩家將各司其職：一位製作裝備，另一位與怪物搏鬥。</p>
-        <br>
-        <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-    <!-- /.row -->
+    
 
     <hr>
 
     <!-- Pagination -->
     <ul class="pagination justify-content-center">
+      <li class="page-item ">
+        <a class="page-link" href="collectionProject.html">專案</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="collectionPractice.html">個人學習</a>
+      </li>
       <li class="page-item disabled">
-        <a class="page-link" href="#">專案</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">練習</a>
-      </li>
-      <li class="page-item">
         <a class="page-link" href="#">Game Jam</a>
       </li>
     </ul>
@@ -177,8 +137,9 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
+      <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
     </div>
     <!-- /.container -->
   </footer>
