--- a/collectionProject.html
+++ b/collectionProject.html
@@ -38,10 +38,8 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item active" href="collectionProject.html">專案</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">練習</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">Game Jam</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="itemXREye.html">作品單頁</a>
+              <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
+              <a class="dropdown-item" href="collectionGameJam.html">Game Jam</a>
             </div>
           </li>
           <li class="nav-item">
@@ -52,6 +50,7 @@
     </div>
   </nav>
 
+  
   <!-- Page Content -->
   <div class="container">
 
@@ -65,10 +64,10 @@
     <ol class="breadcrumb" style="display:flex; align-items: center;">
       <li class="breadcrumb-item active" style="font-size: x-large; color: black; vertical-align: text-bottom;"><b>專案</b> </li>
       <li class="breadcrumb-item" style="vertical-align: text-bottom;">
-        <a href="index.html">練習</a>
+        <a href="collectionPractice.html">個人學習</a>
       </li>
       <li class="breadcrumb-item" style="vertical-align: text-bottom;">
-        <a href="index.html">Game Jam</a>
+        <a href="collectionGameJam.html">Game Jam</a>
       </li>
       
     </ol>
@@ -77,7 +76,7 @@
     <!-- Project One -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
+        <a href="itemSlime.html">
           <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbSlime.png" alt="">
         </a>
       </div>
@@ -98,7 +97,7 @@
     <!-- Project Two -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
+        <a href="itemXREye.html">
           <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbEye.png" alt="">
         </a>
       </div>
@@ -116,32 +115,11 @@
 
     <hr>
 
-    <!-- Project Three -->
-    <div class="row">
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbBlood.png" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3><b>厄血</b></h3>
-        <p style = "font-size:larger;"> 第三人稱潛行動作遊戲，營造末日氛圍的線性劇情遊戲。</p>
-        <br>
-        <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
     <!-- Project Four -->
     <div class="row">
 
       <div class="col-md-7">
-        <a href="#">
+        <a href="itemWeapolution.html">
           <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbWeapon.png" alt="">
         </a>
       </div>
@@ -159,16 +137,39 @@
 
     <hr>
 
+    <!-- Project Three -->
+    <div class="row">
+      <div class="col-md-7">
+        <a href="#">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbBlood.png" alt="">
+        </a>
+      </div>
+      <div class="col-md-5">
+        <h3><b>厄血 (未完成)</b></h3>
+        <p style = "font-size:larger;"> 第三人稱潛行動作遊戲，營造末日氛圍的線性劇情遊戲。</p>
+        <br>
+        <br>
+        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+
+
     <!-- Pagination -->
     <ul class="pagination justify-content-center">
       <li class="page-item disabled">
         <a class="page-link" href="#">專案</a>
       </li>
       <li class="page-item">
-        <a class="page-link" href="#">練習</a>
+        <a class="page-link" href="collectionPractice.html">個人學習</a>
       </li>
       <li class="page-item">
-        <a class="page-link" href="#">Game Jam</a>
+        <a class="page-link" href="collectionGameJam.html">Game Jam</a>
       </li>
     </ul>
 
@@ -177,8 +178,9 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
+      <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
     </div>
     <!-- /.container -->
   </footer>
