--- a/itemBlood.html
+++ b/itemBlood.html
@@ -38,7 +38,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item active" href="collectionProject.html">專案</a>
-              <a class="dropdown-item" href="collectionPractice.html">練習</a>
+              <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
               <a class="dropdown-item" href="collectionPractice.html">Game Jam</a>
             </div>
           </li>
@@ -168,14 +168,35 @@
     </div>
     <!-- /.row -->
 
+    <br><hr/>
+    <h3 class="my-4" style="color:  #233d5a; font-family:'Noto Sans TC', sans-serif;">其他專案作品</h3>
+
+    <div class="row" style="color:  #233d5a; font-family:'Noto Sans TC', sans-serif;">
+
+      <div class="col-md-3 col-sm-6 mb-4">
+        <a href="itemSlime.html">
+          <img class="img-fluid" src="Image/Slime0.png" alt="">
+        </a>
+      </div>
+
+      <div class="col-md-3 col-sm-6 mb-4">
+        <a href="itemXREye.html">
+          <img class="img-fluid" src="Image/XREye0.png" alt="">
+        </a>
+      </div>
+
+      
+    </div>
+
   </div>
   <!-- /.container -->
 
   
   <!-- Footer -->
   <footer class="py-3 bg-dark" style = "padding-bottom:0px;">
-    <div class="container" style = "margin-right:0px; display:flex; justify-content:flex-end; align-items:flex-end;">
-      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Your Website 2020</p>
+    <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
+      <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
     </div>
     <!-- /.container -->
   </footer>
