--- a/itemSlime.html
+++ b/itemSlime.html
@@ -38,7 +38,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item active" href="collectionProject.html">專案</a>
-              <a class="dropdown-item" href="collectionPractice.html">練習</a>
+              <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
               <a class="dropdown-item" href="collectionPractice.html">Game Jam</a>
             </div>
           </li>
@@ -74,7 +74,7 @@
         <!-- <img class="img-fluid" id="hide" src="Image/test0.jpg" alt=""> -->
       </div>
       <div class=" imgBarShow" style="display: block; ">
-        <img class="img-fluid imgBarShowImg" style="width: 100%;" src="Image/XREye0.png" alt="">
+        <img class="img-fluid imgBarShowImg" style="width: 100%;" src="Image/SlimeVedio.png" alt="">
       </div>
       <div class="imgBarDiscribe" style="display: block; height:100%; color:  #233d5a; font-size:large; font-family: 'Noto Sans TC', sans-serif;">
         <p >2~4人的派對遊戲。玩家將扮演史萊姆守護村莊，抵禦哥布林一波波的侵略攻擊，
@@ -101,7 +101,7 @@
         <div class=" imgBarElementLock" style=" position: absolute; border-style: dashed; border-width: 4px; border-color: rgb(14, 155, 255); z-index: 10;" >
           
         </div>
-        <div class=" imgBarVideoElement" name = "https://drive.google.com/file/d/1D-n0OOxUrLTckGFXgZkYpiHmp3gLtpcE/preview" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
+        <div class=" imgBarVideoElement" name = "https://drive.google.com/file/d/1bL9k-xzAAZmaUl3Pqihr9r8RovaHttf3/preview" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
           <a href="#">
             <img class="img-fluid" src="Image/SlimeVedio.png" alt="">
           </a>
@@ -167,14 +167,35 @@
     </div>
     <!-- /.row -->
 
+    <br><hr/>
+    <h3 class="my-4" style="color:  #233d5a; font-family:'Noto Sans TC', sans-serif;">其他專案作品</h3>
+
+    <div class="row" style="color:  #233d5a; font-family:'Noto Sans TC', sans-serif;">
+
+      <div class="col-md-3 col-sm-6 mb-4">
+        <a href="itemXREye.html">
+          <img class="img-fluid" src="Image/XREye0.png" alt="">
+        </a>
+      </div>
+
+      <div class="col-md-3 col-sm-6 mb-4">
+        <a href="itemWeapolution.html">
+          <img class="img-fluid" src="Image/Weapon5.png" alt="">
+        </a>
+      </div>
+
+      
+    </div>
+
   </div>
   <!-- /.container -->
 
   
   <!-- Footer -->
   <footer class="py-3 bg-dark" style = "padding-bottom:0px;">
-    <div class="container" style = "margin-right:0px; display:flex; justify-content:flex-end; align-items:flex-end;">
-      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Your Website 2020</p>
+    <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
+      <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
     </div>
     <!-- /.container -->
   </footer>
