--- a/collectionProject.html
+++ b/collectionProject.html
@@ -140,7 +140,7 @@
     <!-- Project Three -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
+        <a href="itemBlood.html">
           <img class="img-fluid rounded mb-3 mb-md-0" src="Image/collectionThumbBlood.png" alt="">
         </a>
       </div>
@@ -149,7 +149,7 @@
         <p style = "font-size:larger;"> 第三人稱潛行動作遊戲，營造末日氛圍的線性劇情遊戲。</p>
         <br>
         <br>
-        <a class="btn btn-primary" href="#" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
+        <a class="btn btn-primary" href="itemBlood.html" style="right: 0%; bottom: 0%; position: absolute;">&emsp;&emsp;GO&emsp;&emsp;
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
