--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <br>
     <div class="inner">
       <div class="selfDes">
-        <div class="col-6" style=" flex-basis: 40%; position: relative;">
+        <div class="selfDesChild" style="  position: relative;">
           <div style="align-self: flex-start;" >
             <h2>學校經歷</h2>
             <ul>
@@ -144,7 +144,7 @@
           </div>
           
         </div>
-        <div class="col-6" style=" flex-basis: 40%; position: relative;">
+        <div class=" selfDesChild" style=" flex-basis: 40%; position: relative;">
           <div style="align-self: flex-start;" >
             <h2>工作經歷</h2>
             <ul>
@@ -168,30 +168,30 @@
 <!-- Section -->
   <section class="wrapper style1">
     <div class="inner">
-      <header class="align-center">
+      <header class="align-center" style = "margin-bottom: 3%;">
         <h2>成就紀錄(作品集)</h2>
       </header>
       <div class="indflex indflex-3">
         <div class="indcol align-center">
-          <div class="indimage round indfit" style="box-shadow: -5px 5px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
+          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
             <img src="Image/CircleProject.png" alt="" />
           </div>
-          <p>與夥伴一起做遊戲~ </p>
-          <a href="#" class="button">&emsp;&emsp;GO&emsp;&emsp;</a>
+          <p style = " margin-bottom: 0%;">與夥伴一起做遊戲~ </p>
+          <a href="collectionProject.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
         </div>
         <div class="indcol align-center">
-          <div class="indimage round indfit" style="box-shadow: -5px 5px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
+          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
             <img src="Image/CirclePractice.png" alt="" />
           </div>
-          <p>自己磨練技術~ </p>
-          <a href="#" class="button">&emsp;&emsp;GO&emsp;&emsp;</a>
+          <p style ="margin-bottom: 0%;">自己磨練技術~ </p>
+          <a href="collectionPractice.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
         </div>
         <div class="indcol align-center">
-          <div class="indimage round indfit" style="box-shadow: -5px 5px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
+          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
             <img src="Image/CircleGameJam.png" alt="" />
           </div>
-          <p>隨機跟遊戲愛好者一起做奇怪遊戲~ </p>
-          <a href="#" class="button">&emsp;&emsp;GO&emsp;&emsp;</a>
+          <p style = " margin-bottom: 0%;">隨機跟同好做奇怪遊戲~ </p>
+          <a href="collectionGameJam.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
         </div>
       </div>
     </div>
