--- a/itemBlood.html
+++ b/itemBlood.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>周洺翰作品集_武器革命</title>
+  <title>周洺翰作品集_厄血</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -54,15 +54,15 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3 projectTitle"><b>武器革命</b>
+    <h1 class="mt-4 mb-3 projectTitle"><b>厄血</b>
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
         <a href="collectionProject.html">作品集_專案</a>
       </li>
-      <li class="breadcrumb-item breadcrumb-item-time active ">武器革命</li>
-      <li class="breadcrumb-item-time active" >2019/05 ~ 2019/12</li>
+      <li class="breadcrumb-item breadcrumb-item-time active ">厄血</li>
+      <li class="breadcrumb-item-time active" >2019/12 ~ 2020/03</li>
     </ol>
 
 
@@ -70,22 +70,17 @@
       <div class = "imgBarPreBtn" style="align-self:flex-start; border-left-style: solid;border-color: #233d5a;">
       </div>
       <div class=" imgBarShowVideo" style="display: block;position: relative;height: 0;overflow: hidden;padding: 0;padding-bottom: 40%; margin-left: 3%; margin-right: 3%; ">
-        <!--  <iframe src="https://drive.google.com/file/d/1Lum_mxSicSBrAH0oQXbhJvOExChEytIf/preview"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true" style=" position: absolute;height: 100%; width: 100%; "></iframe> -->
+        <iframe src="https://drive.google.com/file/d/10dzG-uUGWdqfJaNEJ_UD8R5OOkXCmwaJ/preview"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true" style=" position: absolute;height: 100%; width: 100%; "></iframe>
         <!-- <img class="img-fluid" id="hide" src="Image/test0.jpg" alt=""> -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/bAusWtK0-Uc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class=" imgBarShow" style="display: block; ">
         <img class="img-fluid imgBarShowImg" style="width: 100%;" src="Image/XREye0.png" alt="">
       </div>
       <div class="imgBarDiscribe" style="display: block; height:100%; color:  #233d5a; font-size:large; font-family: 'Noto Sans TC', sans-serif;">
-        <p >2~4人的派對遊戲。玩家將扮演史萊姆守護村莊，抵禦哥布林一波波的侵略攻擊，
-          玩家需要變成與哥不林同樣的顏色才能對他們造成傷害，像是紅黃藍等基本色可以藉由場上的顏料變色，而橘綠紫等複雜色則需要與其他玩家合體並隨機分別操作移動和攻擊。
-          此外每一天結束可以花費打倒哥布林的錢購買升級道具，直到最後一天打倒Boss。<br><hr/>
-          獲獎紀錄
+        <p >第三人稱潛行類動作遊戲。<br><hr/>
+          參賽紀錄
           <ul>
-            <li>2019KT科藝獎銅獎</li>
-            <li>2019中國獨立遊戲大賽學生組第三名</li>
-            <li>2020放視大賞PC遊戲組優選</li>
+            <li>2020放視大賞PC遊戲組入圍</li>
           </ul>
           </p>
       </div>
