--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>周洺翰個人網站</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -51,7 +51,7 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container" style="height: 800px;">
+  <div class="container" style="height: 760px;">
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">聯絡我
