--- a/itemBlood.html
+++ b/itemBlood.html
@@ -77,7 +77,11 @@
         <img class="img-fluid imgBarShowImg" style="width: 100%;" src="Image/XREye0.png" alt="">
       </div>
       <div class="imgBarDiscribe" style="display: block; height:100%; color:  #233d5a; font-size:large; font-family: 'Noto Sans TC', sans-serif;">
-        <p >第三人稱潛行類動作遊戲。<br><hr/>
+        <p>
+          在一個充斥吸血鬼與魔物的世界中，玩家所扮演的Karol救下了一位神秘的少女 Iterra。
+          在得知這位少女可能知道自己的過去後，他們一起踏上了旅途。過程中Karol將會逐漸揭開自己身上的謎團並面對來自遠古的仇恨，與這位"新"朋友在吸血鬼、人類和魔物的威脅下互相扶持。<br>
+          第三人稱潛行類動作遊戲，玩家可以依照自己的意願選擇暗殺敵人或是正面擊殺，並在遊戲中蒐集更多樣的技能豐富玩法。
+          <hr/>
           參賽紀錄
           <ul>
             <li>2020放視大賞PC遊戲組入圍</li>
@@ -99,37 +103,27 @@
         </div>
         <div class=" imgBarVideoElement" name = "https://drive.google.com/file/d/1D-n0OOxUrLTckGFXgZkYpiHmp3gLtpcE/preview" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
           <a href="#">
-            <img class="img-fluid" src="Image/SlimeVedio.png" alt="">
+            <img class="img-fluid" src="Image/BloodVideo.png" alt="">
           </a>
         </div>
         <div class="  imgBarImgElement" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
           <a href="#">
-            <img class="img-fluid" src="Image/Slime0.png" alt="">
+            <img class="img-fluid" src="Image/Blood0.png" alt="">
           </a>
         </div>
         <div class="  imgBarImgElement" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
           <a href="#">
-            <img class="img-fluid" src="Image/Slime1.png" alt="">
+            <img class="img-fluid" src="Image/Blood1.png" alt="">
           </a>
         </div>
         <div class="imgBarImgElement" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
           <a href="#">
-            <img class="img-fluid" src="Image/Slime2.png" alt="">
+            <img class="img-fluid" src="Image/Blood2.png" alt="">
           </a>
         </div>
         <div class=" imgBarImgElement" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
           <a href="#">
-            <img class="img-fluid" src="Image/Slime3.png" alt="">
-          </a>
-        </div>
-        <div class="  imgBarImgElement" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13% " >
-          <a href="#">
-            <img class="img-fluid" src="Image/Slime4.gif" alt="">
-          </a>
-        </div>
-        <div class=" imgBarImgElement" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
-          <a href="#">
-            <img class="img-fluid" src="Image/Slime5.png" alt="">
+            <img class="img-fluid" src="Image/Blood3.png" alt="">
           </a>
         </div>
       </div>
@@ -144,9 +138,9 @@
       <div class="" style="color:  #233d5a; font-family:'Noto Sans TC', sans-serif;">
         <h2 class="my-3"><b>學習重點</b></h2>
         <ul style = "font-size:large; ">
-          <li style="margin-top:1.5%;"><h5><b >團隊分工</b><h5></li>
+          <li style="margin-top:1.5%;"><h5><b >團隊第一次開發較大型3D專案</b><h5></li>
             <ul>
-              <li>相較於之前團隊有較多的開發經驗，試著與另一名程式協調彼此的窗口</li>
+              <li></li>
               <li>此次開發分工為怪物及遊戲流程</li>
             </ul>
 
