--- a/itemSlime.html
+++ b/itemSlime.html
@@ -151,7 +151,7 @@
           <li style="margin-top:1.5%;"><h5><b >團隊分工</b><h5></li>
             <ul>
               <li>相較於之前團隊有較多的開發經驗，試著與另一名程式協調彼此的窗口</li>
-              <li>此次開發分工為怪物及遊戲流程</li>
+              <li>此次開發負責的分工為怪物及遊戲流程</li>
             </ul>
 
           <li style="margin-top:1.5%;"><h5><b>設計模式</b><h5></li>
