--- a/itemBlood.html
+++ b/itemBlood.html
@@ -138,12 +138,21 @@
       <div class="" style="color:  #233d5a; font-family:'Noto Sans TC', sans-serif;">
         <h2 class="my-3"><b>學習重點</b></h2>
         <ul style = "font-size:large; ">
-          <li style="margin-top:1.5%;"><h5><b >團隊第一次開發較大型3D專案</b><h5></li>
+          <li style="margin-top:1.5%;"><h5><b >團隊第一次開發較大型的3D專案</b><h5></li>
             <ul>
-              <li></li>
+              <li>學習如何優化或簡化3D物理碰撞偵測</li>
+              <li>與美術、企劃討論試著設計更複雜的人物動畫狀態機</li>
+              <li>與美術討論如何在美觀與效能做取捨</li>
+              <li>嘗試寫給企劃用的關卡編輯器</li>
               <li>此次開發分工為怪物及遊戲流程</li>
             </ul>
-
+            <li style="margin-top:1.5%;"><h5><b>Unity新功能</b><h5></li>
+              <ul>
+                <li>Post Processing：協助美術調整色調、添加光暈和霧效等後處理</li>
+                <li>Shader Graph：實作玩家的ToonShader和攻擊特效</li>
+                <li>試著用工廠方法模式和享元模式來規劃怪物的生成</li>
+                <li>試著用狀態模式規劃遊戲的流程，讓主程式依不同時期呼叫各時期的狀態迴圈</li>
+              </ul>
           <li style="margin-top:1.5%;"><h5><b>設計模式</b><h5></li>
           <ul>
             <li>在比較習慣開發遊戲後，學習設計模式並練習如何套用到專案之中</li>
