blood page and index

--- a/itemBlood.html
+++ b/itemBlood.html
@@ -101,7 +101,7 @@
         <div class=" imgBarElementLock" style=" position: absolute; border-style: dashed; border-width: 4px; border-color: rgb(14, 155, 255); z-index: 10;" >
           
         </div>
-        <div class=" imgBarVideoElement" name = "https://drive.google.com/file/d/1D-n0OOxUrLTckGFXgZkYpiHmp3gLtpcE/preview" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
+        <div class=" imgBarVideoElement" name = "https://drive.google.com/file/d/10dzG-uUGWdqfJaNEJ_UD8R5OOkXCmwaJ/preview" style="margin-top: 1%; margin-bottom: 1%; margin-left: 1%;margin-right: 1%; flex-basis: 13%" >
           <a href="#">
             <img class="img-fluid" src="Image/BloodVideo.png" alt="">
           </a>
@@ -141,25 +141,16 @@
           <li style="margin-top:1.5%;"><h5><b >團隊第一次開發較大型的3D專案</b><h5></li>
             <ul>
               <li>學習如何優化或簡化3D物理碰撞偵測</li>
-              <li>與美術、企劃討論試著設計更複雜的人物動畫狀態機</li>
-              <li>與美術討論如何在美觀與效能做取捨</li>
-              <li>嘗試寫給企劃用的關卡編輯器</li>
-              <li>此次開發分工為怪物及遊戲流程</li>
+              <li>與美術、企劃討論，試著設計更複雜的人物動畫狀態機</li>
+              <li>與美術討論如何在美觀與效能做取捨，並學習燈光烘焙、LOD等</li>
+              <li>嘗試寫關卡編輯器供企劃使用</li>
             </ul>
             <li style="margin-top:1.5%;"><h5><b>Unity新功能</b><h5></li>
               <ul>
                 <li>Post Processing：協助美術調整色調、添加光暈和霧效等後處理</li>
                 <li>Shader Graph：實作玩家的ToonShader和攻擊特效</li>
-                <li>試著用工廠方法模式和享元模式來規劃怪物的生成</li>
-                <li>試著用狀態模式規劃遊戲的流程，讓主程式依不同時期呼叫各時期的狀態迴圈</li>
+                <li>Cinemachine：設置關卡的動態攝影機</li>
               </ul>
-          <li style="margin-top:1.5%;"><h5><b>設計模式</b><h5></li>
-          <ul>
-            <li>在比較習慣開發遊戲後，學習設計模式並練習如何套用到專案之中</li>
-            <li>試著用仲介者模式減少怪物與玩家的依賴</li>
-            <li>試著用工廠方法模式和享元模式來規劃怪物的生成</li>
-            <li>試著用狀態模式規劃遊戲的流程，讓主程式依不同時期呼叫各時期的狀態迴圈</li>
-          </ul>
         </ul>
       </div>
 
@@ -183,6 +174,11 @@
         </a>
       </div>
 
+      <div class="col-md-3 col-sm-6 mb-4">
+        <a href="itemWeapolution.html">
+          <img class="img-fluid" src="Image/Weapon5.png" alt="">
+        </a>
+      </div>
       
     </div>
 
