--- a/itemXREye.html
+++ b/itemXREye.html
@@ -210,6 +210,11 @@
         </a>
       </div>
 
+      <div class="col-md-3 col-sm-6 mb-4">
+        <a href="itemBlood.html">
+          <img class="img-fluid" src="Image/Blood0.png" alt="">
+        </a>
+      </div>
       
     </div>
 
