--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     </div>
   </section>
 
+  <!-- Section -->
   <section class="wrapper style2" style="padding-top: 0%; padding-bottom: 0%;">
     <br>
     <div class="inner">
