--- a/newIndex_backuup.html
+++ b/newIndex_backuup.html
@@ -20,6 +20,37 @@
 </head>
 
 <body>
+
+  <!-- Navigation -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Dyron Zhou123</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">關於我</a>
+          </li>
+          <li class="nav-item  dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              作品集
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="collectionProject.html">專案</a>
+              <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
+              <a class="dropdown-item" href="collectionGameJam.html">Game Jam</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">聯絡我</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <header>
     
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -68,17 +99,20 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">關於我</a>
+            <a class="nav-link" href="index.html">關於我</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               作品集
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="collectionProject.html">專案</a>
               <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
-              <a class="dropdown-item" href="#">Game Jam</a>
+              <a class="dropdown-item active" href="#">Game Jam</a>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">聯絡我</a>
           </li>
         </ul>
       </div>
@@ -156,7 +190,39 @@
 </section>
 
 <!-- Section -->
-<section class="wrapper style1" style="padding-top: 0%; padding-bottom: 0%;">
+<section class="wrapper style1">
+  <div class="inner">
+    <header class="align-center" style = "margin-bottom: 3%;">
+      <h1 >成就紀錄(作品集)</h1>
+    </header>
+    <div class="indflex indflex-3">
+      <div class="indcol align-center">
+        <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #182028;">
+          <img src="Image/CircleProject.png" alt="" />
+        </div>
+        <p style = " margin-bottom: 0%;">與夥伴一起做遊戲~ </p>
+        <a href="collectionProject.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
+      </div>
+      <div class="indcol align-center">
+        <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #182028;">
+          <img src="Image/CirclePractice.png" alt="" />
+        </div>
+        <p style ="margin-bottom: 0%;">自己磨練技術~ </p>
+        <a href="collectionPractice.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
+      </div>
+      <div class="indcol align-center">
+        <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #182028;">
+          <img src="Image/CircleGameJam.png" alt="" />
+        </div>
+        <p style = " margin-bottom: 0%;">隨機跟同好做奇怪遊戲~ </p>
+        <a href="collectionGameJam.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Section -->
+<section class="wrapper style2" style="padding-top: 0%; padding-bottom: 0%;">
   <br>
   <div class="inner">
     <h1 class="my-4 ">技能組</h1>
@@ -165,9 +231,9 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">C / C++ 語言</h4>
-          <div class="card-body" style="background-color:#182028;">
-            <ul class="card-text" style="font-size: large; color:#fafafa;">
+          <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">C / C++ 語言</h4>
+          <div class="card-body" style="background-color:#fafafa;">
+            <ul class="card-text" style="font-size: large; color:#182028; font-weight: bold;">
               <li>熟悉C、C++語言大部分特色且運用。</li>
               <li>曾以C++為腳本使用COCOS2DX 和 OpenGL 各別做出兩個小遊戲。</li>
             </ul>
@@ -176,9 +242,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">Unity</h4>
-          <div class="card-body" style="background-color:#182028;">
-            <ul class="card-text" style="font-size: large; color:#fafafa;">
+          <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">Unity</h4>
+          <div class="card-body" style="background-color:#fafafa;">
+            <ul class="card-text" style="font-size: large; color:#0b131b;">
               <li> 熟悉引擎功能，習慣使用C#編程 </li>
               <li>做過數個遊戲和論文專案製作</li>
               <li>於實習期間開發一使用Vuforia和Google VR App</li>
@@ -189,25 +255,20 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">Shader</h4>
-          <div class="card-body" style="background-color:#182028;">
-            <ul class="card-text" style="font-size: large; color:#fafafa;">
-              <li>利用 Stencil Buffer 實做物體被遮擋的提示效果</li>
-              <li>做過RGB偏移的Glitch畫面後處理</li>
-              <li>2D遊戲的物體Outline效果</li>
-              <li>黑幕轉場鏤空圖案的畫面後處理</li>
-              <li>用高斯模糊模擬近視的畫面後處理</li>
-              <li>UI圖示的遶圈提示效果</li>
-              <li>使用Shader Graph 做出Toon Shader、Distortion、能量護盾、等特效</li>
+          <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">Shader</h4>
+          <div class="card-body" style="background-color:#fafafa;">
+            <ul class="card-text" style="font-size: large; color:#233d5a;">
+              <li>熟悉C、C++語言大部分特色且運用。</li>
+              <li>曾以C++為腳本使用COCOS2DX 和 OpenGL 各別做出兩個小遊戲。</li>
             </ul>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">Unreal</h4>
-          <div class="card-body" style="background-color:#182028;">
-            <ul class="card-text" style="font-size: large; color:#fafafa;">
+          <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">Unreal</h4>
+          <div class="card-body" style="background-color:#fafafa;">
+            <ul class="card-text" style="font-size: large; color:#233d5a;">
               <li>仍在熟悉整個引擎操作</li>
               <li>曾用BluePrint做過一款PC小遊戲</li>
             </ul>
@@ -216,9 +277,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">軟體工具</h4>
-          <div class="card-body" style="background-color:#182028;">
-            <ul class="card-text" style="font-size: large; color:#fafafa;">
+          <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">軟體工具</h4>
+          <div class="card-body" style="background-color:#fafafa;">
+            <ul class="card-text" style="font-size: large; color:#233d5a;">
               <li> PhotoShop、Illustrator、SAI 繪圖與合成後至相片圖片 </li>
               <li>3DSMAX 場景靜物建模、人物建模及動畫</li>
               <li>Microsoft Office文書軟體基本操作</li>
@@ -228,9 +289,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">論文撰寫</h4>
-          <div class="card-body" style="background-color:#182028;">
-            <ul class="card-text" style="font-size: large; color:#fafafa;">
+          <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">論文撰寫</h4>
+          <div class="card-body" style="background-color:#fafafa;">
+            <ul class="card-text" style="font-size: large; color:#233d5a;">
               <li> 查找相關主題論文及抓重點 </li>
               <li>論文架構書寫</li>
               <li>研究報告</li>
@@ -240,9 +301,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">活動規劃、團隊合作</h4>
-          <div class="card-body" style="background-color:#182028;">
-            <ul class="card-text" style="font-size: large; color:#fafafa;">
+          <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">活動規劃、團隊合作</h4>
+          <div class="card-body" style="background-color:#fafafa;">
+            <ul class="card-text" style="font-size: large; color:#233d5a;">
               <li> 從高中開始參與很多活動的規劃，大學之後當上活動長更學習到了很多企劃制定、人際活動、即興發揮等能使活動更順利的許多技能 </li>
             </ul>
           </div>
@@ -254,54 +315,20 @@
 </section>
 
 <!-- Section -->
-<section class="wrapper style2">
-  <div class="inner">
-    <header class="align-center" style = "margin-bottom: 3%;">
-      <h1 >成就紀錄(作品集)</h1>
-    </header>
-    <div class="indflex indflex-3">
-      <div class="indcol align-center">
-        <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a;">
-          <img src="Image/CircleProject.png" alt="" />
-        </div>
-        <p style = " margin-bottom: 0%; color: #ffffffab;">與夥伴一起做遊戲~ </p>
-        <a href="collectionProject.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
-      </div>
-      <div class="indcol align-center">
-        <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a;">
-          <img src="Image/CirclePractice.png" alt="" />
-        </div>
-        <p style ="margin-bottom: 0%;color: #ffffffab;">自己磨練技術~ </p>
-        <a href="collectionPractice.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
-      </div>
-      <div class="indcol align-center">
-        <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a;">
-          <img src="Image/CircleGameJam.png" alt="" />
-        </div>
-        <p style = " margin-bottom: 0%;color: #ffffffab;">隨機跟同好做奇怪遊戲~ </p>
-        <a href="collectionGameJam.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Section -->
 <section class="wrapper style1" style="padding-top: 0%; padding-bottom: 0%;">
-  <div class="inner" style="padding-left: 5%;">
+  <div class="inner">
     <!-- 2 Columns -->
-    <h1 class="my-4 " style="display: inline-block;">其他資訊</h1>
-      <ul style="color: #233d5a;">
-        <li style="margin-bottom: 1.5em;"><h3 style="color: #233d5a; margin-bottom: 0%;">E-mail：</h3> 
-          <p style="font-size: 1.5em; margin-bottom: 0%;"> dyron85511@gmail.com</p>
-        </li>
-        <li style="margin-bottom: 1.5em;"><h3 style="color: #233d5a; margin-bottom: 0%;">Github：</h3> 
-          <a style="font-size: 1.5em; " href=" https://github.com/dyronzha?tab=overview"> https://github.com/dyronzha?tab=overview</a>
-        </li>
-        <li style="margin-bottom: 1.5em;"><h3 style="color: #233d5a; margin-bottom: 0%;">作品集(雲端)：</h3> 
-          <a style="font-size: 1.5em;" href=" https://drive.google.com/drive/folders/1G9xjZQHcTb7BM8bc_yx09FvqklTyMRiY?usp=sharing"> https://drive.google.com/drive/folders/1G9xjZQHcTb7BM8bc_yx09FvqklTyMRiY?usp=sharing</a>
-        </li>
-
-      </ul>
+    <h1 class="my-4 " style="display: inline-block;">聯絡我</h1>
+      <div class="indflex indflex-2">
+        <div class="indcol indcol2">
+          <h3 style="color: #182028;">你好呀冒險者~~</h3>
+          <p style="font-size: large; color:   #182028;"><b>我是周洺翰，畢業於國立台北教育大學玩具與遊戲設計研究所。<br>
+            遊戲對自己來說是最好的紓壓劑，從大學二年級開始加入了系上的遊戲讀書會，在那裡跟大家一起玩遊戲做遊戲，將自己的想法透過遊戲實現再與其他人的想法碰撞，那是多麼令人開心的事。<br>
+            進入資策會實習後學到很多以前不常碰過的第三方插件如Vuforia、Google VR等，並沒有像以前所認為的那麼困難，能夠嘗試更多新的可能，開拓自己的視野，更有信心做出更多樣的遊戲。<br>
+            讀研究所時與志同道合的同學一起做遊戲並去參與各種比賽，那時候與夥伴像是沒日沒夜地為了目標所奮鬥，雖然辛苦卻也留下深刻的美好回憶和收穫。<br>
+            我想我可以幫自己總結"遊戲豐富了我的人生，而我也將以遊戲豐富他人而活"。</b></p>
+        </div>
+      </div>
   </div>
 </section>
 
