--- a/itemGoogle.html
+++ b/itemGoogle.html
@@ -79,8 +79,9 @@
         <img class="img-fluid imgBarShowImg" style="width: 100%;" src="Image/googleVideo.png" alt="">
       </div>
       <div class="imgBarDiscribe" style="display: block; height:100%; color:  #233d5a; font-size:large; font-family: 'Noto Sans TC', sans-serif;">
-        <p> 研究室新購一隻 Ar 手機,教授讓我研究看看,就想說能不能使用Google Ar Core做看看遊戲，構想是在手機偵測平面後可以召喚BOSS進行戰鬥，並利用自身移動來閃躲和用手在螢幕滑動做出反擊 <br><hr/>
-          想使用Firebase做現有的資料庫，學習相關的API看能不能做一款遊戲
+        <p> 
+          <b>Google Ar Core</b><br>研究室新購一隻 Ar 手機,教授讓我研究看看,就想說能不能使用Google Ar Core做看看遊戲，構想是在手機偵測平面後可以召喚BOSS進行戰鬥，並利用自身移動來閃躲和用手在螢幕滑動做出反擊 <br><hr/>
+          <b>Google Firebase</b><br>想使用Firebase做現有的資料庫，學習相關的API看能不能做一款遊戲
           </p>
       </div>
       <div class = "imgBarNextBtn" style="align-self:flex-end; border-right-style: solid;border-color: #233d5a; ">
@@ -196,10 +197,10 @@
 
   
   <!-- Footer -->
-  <footer class="py-3 bg-dark" style = "padding-bottom:0px;">
+  <footer class="py-3 bg-dark">
     <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
       <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
-      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2021</p>
     </div>
     <!-- /.container -->
   </footer>
