--- a/itemLie.html
+++ b/itemLie.html
@@ -160,10 +160,10 @@
 
   
   <!-- Footer -->
-  <footer class="py-3 bg-dark" style = "padding-bottom:0px;">
+  <footer class="py-3 bg-dark">
     <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
       <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
-      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2021</p>
     </div>
     <!-- /.container -->
   </footer>
