--- a/Index - 複製.html
+++ b/Index - 複製.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
 
@@ -77,7 +77,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="collectionProject.html">專案</a>
               <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
-              <a class="dropdown-item" href="collectionGameJam.html">Game Jam</a>
+              <a class="dropdown-item" href="#">Game Jam</a>
             </div>
           </li>
         </ul>
