--- a/collectionGameJam.html
+++ b/collectionGameJam.html
@@ -40,11 +40,8 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="collectionProject.html">專案</a>
               <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
-              <a class="dropdown-item active" href="#">Game Jam</a>
+              <a class="dropdown-item active" href="collectionGameJam.html">Game Jam</a>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">聯絡我</a>
           </li>
         </ul>
       </div>
