--- a/newIndex.html
+++ b/newIndex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
 
@@ -77,7 +77,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="collectionProject.html">專案</a>
               <a class="dropdown-item" href="collectionPractice.html">個人學習</a>
-              <a class="dropdown-item" href="collectionGameJam.html">Game Jam</a>
+              <a class="dropdown-item" href="#">Game Jam</a>
             </div>
           </li>
         </ul>
@@ -98,11 +98,11 @@
           </div>
         </div>
         <div class="indcol indcol2">
-          <h3 style="color: #182028;">哈囉拜訪者~~</h3>
-          <p style="font-size: larger; color:   #182028;"><b>我是周洺翰，畢業於國立台北教育大學玩具與遊戲設計研究所。
-            遊戲對自己來說是很好的紓壓劑，從大學二年級起加入了系上的遊戲讀書會，在那裡大家一起玩遊戲做遊戲，將自己的想法透過遊戲實現並與其他人互相討論一起成長。
-            進入資策會實習後學到很多以前不常碰過的第三方插件如Vuforia、Google VR等，了解後發現沒有先前所認為的那般困難，又信心能夠嘗試更多新的可能，開拓自己的視野做出更多樣的遊戲。
-            讀研究所時與志同道合的朋友一起做遊戲參加各種比賽，那時與夥伴像是沒日沒夜地為了目標所奮鬥，雖然辛苦卻也留下深刻的美好回憶和收穫。<br>
+          <h3 style="color: #182028;">你好呀冒險者~~</h3>
+          <p style="font-size: large; color:   #182028;"><b>我是周洺翰，畢業於國立台北教育大學玩具與遊戲設計研究所。<br>
+            遊戲對自己來說是最好的紓壓劑，從大學二年級開始加入了系上的遊戲讀書會，在那裡跟大家一起玩遊戲做遊戲，將自己的想法透過遊戲實現再與其他人的想法碰撞，那是多麼令人開心的事。<br>
+            進入資策會實習後學到很多以前不常碰過的第三方插件如Vuforia、Google VR等，並沒有像以前所認為的那麼困難，能夠嘗試更多新的可能，開拓自己的視野，更有信心做出更多樣的遊戲。<br>
+            讀研究所時與志同道合的同學一起做遊戲並去參與各種比賽，那時候與夥伴像是沒日沒夜地為了目標所奮鬥，雖然辛苦卻也留下深刻的美好回憶和收穫。<br>
             我想我可以幫自己總結"遊戲豐富了我的人生，而我也將以遊戲豐富他人而活"。</b></p>
         </div>
       </div>
@@ -139,7 +139,7 @@
           <h2>工作經歷</h2>
           <ul>
             <li>
-              <h4 style="margin-block-end:0em; margin-block-start: 1.2em;">資策會教研所研實生 </h4>
+              <h4 style="margin-block-end:0em; margin-block-start: 1.2em;">資策會教研所實習生 </h4>
               <p style="margin-left: 1%;">2018.06 - 2018.12<br>以程式身分協助專案開發 (XR防盲小尖兵APP)</p>
             </li>
             <li style="margin-left: 5%;">
@@ -193,11 +193,11 @@
           <div class="card-body" style="background-color:#182028;">
             <ul class="card-text" style="font-size: large; color:#fafafa;">
               <li>利用 Stencil Buffer 實做物體被遮擋的提示效果</li>
-              <li>將像素位移與RGB偏移呈現Glitch的畫面後處理</li>
+              <li>做過RGB偏移的Glitch畫面後處理</li>
               <li>2D遊戲的物體Outline效果</li>
               <li>黑幕轉場鏤空圖案的畫面後處理</li>
-              <li>用高斯模糊模擬近視畫面效果</li>
-              <li>UI圖示的遶圈提示</li>
+              <li>用高斯模糊模擬近視的畫面後處理</li>
+              <li>UI圖示的遶圈提示效果</li>
               <li>使用Shader Graph 做出Toon Shader、Distortion、能量護盾、等特效</li>
             </ul>
           </div>
@@ -257,26 +257,26 @@
 <section class="wrapper style2">
   <div class="inner">
     <header class="align-center" style = "margin-bottom: 3%;">
-      <h1 >_作品集_</h1>
+      <h1 >成就紀錄(作品集)</h1>
     </header>
     <div class="indflex indflex-3">
       <div class="indcol align-center">
         <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a;">
-          <a href="collectionProject.html"><img src="Image/CircleProject.png" alt="" /></a>
+          <img src="Image/CircleProject.png" alt="" />
         </div>
         <p style = " margin-bottom: 0%; color: #ffffffab;">與夥伴一起做遊戲~ </p>
         <a href="collectionProject.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
       </div>
       <div class="indcol align-center">
         <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a;">
-          <a href="collectionPractice.html"><img src="Image/CirclePractice.png" alt="" /></a>
+          <img src="Image/CirclePractice.png" alt="" />
         </div>
         <p style ="margin-bottom: 0%;color: #ffffffab;">自己磨練技術~ </p>
         <a href="collectionPractice.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
       </div>
       <div class="indcol align-center">
         <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a;">
-          <a href="collectionGameJam.html"><img src="Image/CircleGameJam.png" alt="" /></a>
+          <img src="Image/CircleGameJam.png" alt="" />
         </div>
         <p style = " margin-bottom: 0%;color: #ffffffab;">隨機跟同好做奇怪遊戲~ </p>
         <a href="collectionGameJam.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
@@ -316,7 +316,7 @@
    <footer class="py-3 bg-dark">
     <div class="container" style = "margin-right:0px; display:flex; flex-direction: column; justify-content:flex-end; align-items:flex-end;">
       <p class="m-0 text-center text-white">Copyright &copy; 2013-2020 Start Bootstrap LLC</p>
-      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2021</p>
+      <p class="m-0 text-center text-white" style = "margin-right:0px;">Copyright &copy; Dyron Zhou 2020</p>
     </div>
     <!-- /.container -->
   </footer>
